--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Gracias por compartirnos tus datos personales. Debiste prestar atencion a los consejos
+    Gracias por compartirnos tus datos personales. Debiste prestar atencion a los consejos, gil
 </body>
 </html>
